<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/viewBg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mypopularmovieapp.thiagoxtapps.com.mypopularmovieapp.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movietitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="10dp"
                android:text="@string/name_movie"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movietitle"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/favorite"
                android:layout_width="32dp"
                android:layout_height="32dp" />

            <TextView
                android:id="@+id/plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:text="@string/plot"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plotsynopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/plot"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/plotsynopsis"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:text="@string/rating"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userrating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rating"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userrating"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:text="@string/release"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/releasedate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/release"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>